versions/26.1.2/translated/ru_ru/contributing.md
---
title: Руководство по внесению вклада
description: Руководство по внесению вклада в документацию Fabric
---

Этот сайт использует [VitePress](https://vitepress.dev/) для генерации статического HTML-кода из различных Markdown-файлов. Вы можете ознакомиться с Markdown-расширениями для VitePress [здесь](https://vitepress.dev/guide/markdown#features).

Есть три пути для внесения своего вклада для сайта:

- [Перевод документации](#translating-documentation)
- [Вклад в содержимое](#contributing-content)
- Руководство по внесению вклада {#contributing}

Все материалы должны соответствовать нашим [рекомендациям по стилю](#style-guidelines).

## Перевод документации {#translating-documentation}

Если вы хотите перевести документацию на свой язык, вы можете сделать это на [странице Fabric на Crowdin](https://crowdin.com/project/fabricmc).

<!-- markdownlint-disable titlecase-rule -->

## <Badge type="tip">new-content</Badge> Внесение контента {#contributing-content}

<!-- markdownlint-enable titlecase-rule -->

Основной способ внести вклад в документацию Fabric — это внесение контента.

Все материалы, добавляемые в контент, проходят следующие этапы, каждому из которых соответствует метка:

1. <Badge type="tip">locally</Badge>: Подготовьте изменения и отправьте pull request
2. <Badge type="tip">stage:expansion</Badge>: Рекомендации по расширению, если необходимо
3. <Badge type="tip">stage:verification</Badge>: Проверка содержимого
4. <Badge type="tip">stage:cleanup</Badge>: Грамматика, Линтинг...
5. <Badge type="tip">stage:ready</Badge>: Готово к релизу!

Всё содержимое должно соответствовать нашим [рекомендациям по стилю](#style-guidelines).

### 1. Подготовьте свои изменения {#1-prepare-your-changes}

Этот сайт с открытым исходным кодом, он разрабатывается в репозитории GitHub, что означает, что мы полагаемся на поток GitHub:

1. [Создайте форк репозитория на GitHub](https://github.com/FabricMC/fabric-docs/fork)
2. Создайте новую ветку в вашем форке
3. Сделайте свои изменения в этой ветке
4. Откройте запрос на изменение в оригинальном репозитории

Вы можете прочитать больше о [потоке GitHub](https://docs.github.com/en/get-started/using-github/github-flow).

Вы можете внести изменения из веб-интерфейса на GitHub, или разработать и предварительно просмотреть веб-сайт локально.

#### Клонирование вашего форка {#clone-your-fork}

Если вы хотите разрабатывать локально, вам нужно будет установить [Git](https://git-scm.com/).

После этого клонируйте свой форк репозитория с помощью:

```sh
# make sure to replace "your-username" with your actual username
git clone https://github.com/your-username/fabric-docs.git
```

#### Установка зависимостей {#install-dependencies}

Если вы хотите предварительно локально просматривать свои изменения, вам нужно будет установить [Node.js версии 18 или выше](https://nodejs.org/en/) и [pnpm](https://pnpm.io/).

После этого убедитесь, что все зависимости установлены с помощью:

```sh
pnpm install
```

#### Запуск сервера разработки {#run-the-development-server}

Это позволит вам предварительно просматривать ваши изменения локально по адресу `localhost:5173` и автоматически перезагрузит страницу при внесении изменений.

```sh
pnpm dev
```

Теперь вы можете открыть сайт и просматривать его из браузера, посетив `http://localhost:5173`.

#### Создание веб-сайта {#building-the-website}

Это скомпилирует все файлы с Markdown в статические HTML-файлы и поместит их в `.vitepress/dist`:

```sh
pnpm build
```

#### Предварительный просмотр созданного веб-сайта {#previewing-the-built-website}

Это запустит локальный сервер на порту `4173`, отображающий содержимое, найденное в `.vitepress/dist`:

```sh
pnpm preview
```

#### Открытие запроса {#opening-a-pull-request}

Если вы довольны своими изменениями, вы можете `push` ваши изменения:

```sh
git add .
git commit -m "Description of your changes"
git push
```

Затем, зайдите по ссылке в выводе команды `git push`, чтобы открыть PR.

### 2. <Badge type="tip">stage:expansion</Badge> Рекомендации по расширению, если необходимо {#2-guidance-for-expansion-if-needed}

Если команда по документированию считает, что вы могли бы расширить свой запрос, один из членов команды добавит метку <Badge type="tip">stage:expansion</Badge> к вашему запросу с комментарием, объясняющим, что, по их мнению, вы могли бы расширить. Если вы согласны с этим предложением, вы можете дополнить свой реквест.

Если вы не хотите дополнять свой реквест, но будете рады, что кто-то другой дополнит его позже, лучше всего создать пост [на странице проблем](https://github.com/FabricMC/fabric-docs/issues) и объяснить, что, по вашему мнению, можно было бы дополнить. Затем группа по документированию добавит метку <Badge type="tip">требуется помощь</Badge> к вашему PR.

### 3. <Badge type="tip">stage:verification</Badge> Проверка содержимого {#3-content-verification}

Это самый важный этап, поскольку он гарантирует точность контента и его соответствие руководству по стилю Fabric Documentation.

На этом этапе необходимо ответить на следующие вопросы:

- Все ли содержания верно?
- Весь ли контент актуален?
- Охватывает ли контент все случаи, например, различные операционные системы?

### 4. <Badge type="tip">stage:cleanup</Badge>: Очистка {#4-cleanup}

На этом этапе происходит следующее:

- Исправление любых грамматических ошибок с помощью [LanguageTool](https://languagetool.org/)
- Анализ всех файлов Markdown с помощью [`markdownlint`](https://github.com/DavidAnson/markdownlint)
- Форматирование всего кода Java с использованием [Checkstyle](https://checkstyle.sourceforge.io/)
- Другие различные исправления и улучшения

## <Badge type="tip">framework</Badge> Вносящий вклад в фреймворк {#contributing-framework}

Фреймворк относится к внутренней структуре веб-сайта. Любые запросы, которые изменяют фреймворк веб-сайта, будут помечены меткой <Badge type="tip">framework</Badge>.

К вашему сведению, вы должны делать pull requests, касающиеся фреймворка, только после консультации с командой документации на [Discord-сервере Fabric](https://discord.gg/v6v4pMv) или через issue.

::: info

Изменение файлов боковой панели и конфигурации панели навигации не считается pull request, касающимся фреймворка.

:::

## Стандарты оформления {#style-guidelines}

Если вы насчёт чего-то не уверены, можете задать свой вопрос в [Fabric Discord](https://discord.fabricmc.net/) или через GitHub Discussions.

### Пишите оригинал на американском английском {#write-the-original-in-american-english}

Вся оригинальная документация написана на английском языке в соответствии с американскими правилами грамматики.

### Добавляйте данные в начало файла {#add-data-to-the-frontmatter}

Все страницы должны иметь заголовок и описание.

Не забывайте также добавлять ваше имя пользователя GitHub в поле `authors` в начале Markdown-файла! Таким образом, мы сможем отдать вам должное.

```yaml
---
title: Title of the Page
description: This is the description of the page.
authors:
  - your-username
---
```

### Добавляйте "якоря" к заголовкам {#add-anchors-to-headings}

Каждый заголовок должен иметь "якорь", который используется для создания ссылки на этот заголовок:

```md
## This Is a Heading {#this-is-a-heading}
```

Якорь должен состоять из строчных букв, цифр и дефисов.

### Размещайте код внутри Example мода {#place-code-within-the-example-mod}

Если вы создаете или изменяете страницы, содержащие код, размещайте этот код в соответствующем месте внутри Example мода (он находится в папке /reference репозитория). Затем используйте функцию [импорта фрагментов/кусков кода, которую предоставляет VitePress](https://vitepress.dev/guide/markdown#import-code-snippets), чтобы встроить этот код на страницу.

Например, чтобы подсветить строки с 15 по 21 в файле ExampleMod.java из этого мода:

::: code-group

```md
<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java{15-21}
```

<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java{15-21}[java]

:::

Если вам нужен более широкий диапазон контроля, вы можете использовать функцию [transclude из `markdown-it-vuepress-code-snippet-enhanced`](https://github.com/fabioaanthony/markdown-it-vuepress-code-snippet-enhanced).

Например, это встроит секции файла выше, которые помечены тегом `#entrypoint`:

::: code-group

```md
<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java#entrypoint
```

<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java#entrypoint

:::

### Создавайте боковую панель для каждого нового раздела {#create-a-sidebar-for-each-new-section}

Если вы создаете новый раздел, вам следует создать новую боковую панель в папке `.vitepress/sidebars` и добавить её в файл `i18n.mts`.

Если вам нужна помощь с этим, спросите [в дискорде Fabric](https://discord.fabricmc.net/) в канале `#docs`.

### Добавьте новые страницы в соответствующие боковые панели {#add-new-pages-to-the-relevant-sidebars}

При создании новой страницы вы должны добавить ее на соответствующую боковую панель в папке `.vitepress/sidebars`.

Опять же, если вам нужна помощь, спросите в дискорде Fabric в канале `#docs`.

### Используйте `/assets` для хранения медиаконтента {#place-media-in-assets}

Любые изображения должны находиться в соответствующем месте в папке `/assets`.

### Используйте относительные ссылки! {#use-relative-links}

Это требуется для правильной работы системы с разными версиями, которая заранее обрабатывает ссылки для добавления версии. Если вы используете обычные ссылки, номер версии не будет добавлен к ссылке.

Также, вы не должны добавлять расширение файла к ссылке.

Например, чтобы сослаться на страницу `/players/index.md` со страницы `/develop/index.md`, вам нужно сделать следующее:

::: code-group

```md:no-line-numbers [✅ Correct]
This is a relative link!
[Page](../players/index)
```

```md:no-line-numbers [❌ Wrong]
This is an absolute link.
[Page](/players/index)
```

```md:no-line-numbers [❌ Wrong]
This relative link has the file extension.
[Page](../players/index.md)
```

:::

<!---->
